--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "pm2-server-dev": "pm2 start \"next dev\"",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "10.2.3",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "sass": "^1.34.1",
     "typescript": "4.3.2"
   }
 }
