--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "moize": "^6.0.3",
     "next": "10.2.3",
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
